<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xareas.pylearn.ui.lessons.LessonFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_lesson" >
        <action
            android:id="@+id/action_lessonShow"
            app:destination="@id/lessonShowFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.xareas.pylearn.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.xareas.pylearn.ui.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <activity
        android:id="@+id/mainActivity"
        android:name="com.xareas.pylearn.MainActivity"
        android:label="MainActivity" />
    <fragment
        android:id="@+id/navBarFragment"
        android:name="com.xareas.pylearn.ui.navbar.NavBarFragment"
        android:label="fragment_nav_bar"
        tools:layout="@layout/fragment_nav_bar" />
    <fragment
        android:id="@+id/lessonShowFragment"
        android:name="com.xareas.pylearn.LessonShowFragment"
        android:label="Lecciones"

        tools:layout="@layout/fragment_lesson_show" >
        <action
            android:id="@+id/action_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="lessonId"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>


</navigation>